finalização do front

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <button class="button" id="generateCloseBtn" type="button">Fechar</button>
             </div>
           </form>
+          <pre class="result" id="zipDiag"></pre>
         </section>
 
         <section class="panel" id="inlinePanel" hidden>
